--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -37,7 +37,7 @@
 
 .nav-menu {
     display: grid;
-    grid-template-columns: repeat(4, auto);
+    grid-template-columns: repeat(5, auto);
     gap: 10px;
     list-style: none;
     text-align: center;
@@ -67,8 +67,4 @@
 
 .menu-icon {
     display: none;
-}
-
-.menu-icon i {
-    color: #fff;
 }
